--- a/CommonSDK/build.gradle
+++ b/CommonSDK/build.gradle
@@ -36,7 +36,7 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api 'me.jessyan:arms:2.5.0'
+
     api 'me.jessyan:arms-imageloader-glide:2.5.0'
 
     //tools
@@ -46,4 +46,5 @@ dependencies {
         exclude module: 'support-annotations'
     }
     api rootProject.ext.dependencies["retrofit-url-manager"]
+    implementation project(path: ':CommonMvp')
 }
