--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':CommonSDK', ':CommonService', ':CommonRes', ':module_zhihu', ':module_gank', 'module_gold', ':CommonMvp',  ':CommonImageloader-glide'
+include ':app', ':CommonSDK', ':CommonService', ':CommonRes', ':module_zhihu', ':module_gank', ':module_launcher', 'module_gold', ':CommonMvp',  ':CommonImageloader-glide'
