--- a/CommonMvp/build.gradle
+++ b/CommonMvp/build.gradle
@@ -37,7 +37,10 @@ dependencies {
     api(rootProject.ext.dependencies["recyclerview-v7"]) {
         exclude module: 'support-annotations'
     }
-    api rootProject.ext.dependencies["annotations"]
+    annotationProcessor rootProject.ext.dependencies["annotations"]
+
+    api rootProject.ext.dependencies["constraint-layout"]
+
 
     //view
     compileOnly rootProject.ext.dependencies["autolayout"]
@@ -95,7 +98,7 @@ dependencies {
     api rootProject.ext.dependencies["okhttp3"]
     compileOnly rootProject.ext.dependencies["glide"]
     annotationProcessor(rootProject.ext.dependencies["glide-compiler"]) {
-        exclude module: 'jsr305'
+//        exclude module: 'jsr305'
     }
 
     //tools
