--- a/common_component_build.gradle
+++ b/common_component_build.gradle
@@ -84,7 +84,7 @@ dependencies {
         releaseImplementation rootProject.ext.dependencies["canary-release"]
         testImplementation rootProject.ext.dependencies["canary-release"]
     } else {
-        compileOnly rootProject.ext.dependencies["butterknife-compiler"]
+        annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
         compileOnly rootProject.ext.dependencies["dagger2-compiler"]
         compileOnly rootProject.ext.dependencies["arouter-compiler"]
         compileOnly rootProject.ext.dependencies["canary-debug"]
