1、修改脚本 2、添加首页功能

--- a/module_translate/build.gradle
+++ b/module_translate/build.gradle
@@ -1,7 +1,7 @@
 apply from:"../common_component_build.gradle"
 
 android {
-    resourcePrefix "zhihu_" //给 Module 内的资源名增加前缀, 避免资源名冲突
+    resourcePrefix "translate_" //给 Module 内的资源名增加前缀, 避免资源名冲突
 }
 
 dependencies {
