--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ android {
         disable "ResourceType"
         abortOnError false
     }
+
+    packagingOptions {
+        exclude 'META-INF/atomicfu.kotlin_module'
+        exclude 'META-INF/xxx'
+    }
 }
 
 dependencies {
