--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ import java.text.SimpleDateFormat
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: "config.gradle"
 buildscript {
+
+    ext.kotlin_version = '1.3.41'
     repositories {
         google()
         jcenter()
@@ -18,6 +20,7 @@ buildscript {
 //        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
         //Gradle Bintray Plugin
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
