--- a/module_translate/build.gradle
+++ b/module_translate/build.gradle
@@ -1,4 +1,7 @@
 apply from:"../common_component_build.gradle"
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     repositories {
