--- a/module_user_center/build.gradle
+++ b/module_user_center/build.gradle
@@ -1,7 +1,7 @@
 apply from:"../common_component_build.gradle"
 
 android {
-//    resourcePrefix "ModuleName_" //给 Module 内的资源名增加前缀, 避免资源名冲突, 建议使用 Module 名作为前缀
+    resourcePrefix "setting_" //给 Module 内的资源名增加前缀, 避免资源名冲突, 建议使用 Module 名作为前缀
 }
 
 dependencies {
