--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
         //使用 runtimeOnly 依赖业务组件, 可实现业务组件的代码在编译时对宿主 App 不可见, 仅在运行时对宿主 App 可见
         runtimeOnly project(":module_translate")
         runtimeOnly project(":module_launcher")
-//        runtimeOnly project(":module_user_center")
+        runtimeOnly project(":module_user_center")
         runtimeOnly project(":module_hotspot")
 
     }
