--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,11 @@
-include ':app', ':CommonSDK', ':CommonRes', ':module_translate', ':module_launcher', ':CommonMvp', ':CommonImageloader-glide', ':library_picture', ':library_ucrop', ':module_user_center', ':module_hotspot'
+include ':app',
+        ':CommonSDK',
+        ':CommonRes',
+        ':module_translate',
+        ':module_launcher',
+        ':CommonMvp',
+        ':CommonImageloader-glide',
+        ':library_picture',
+        ':library_ucrop',
+        ':module_user_center',
+        ':module_hotspot'
