1、修改拍照逻辑

--- a/module_translate/build.gradle
+++ b/module_translate/build.gradle
@@ -1,4 +1,4 @@
-apply from:"../common_component_build.gradle"
+apply from: "../common_component_build.gradle"
 
 android {
     repositories {
@@ -10,6 +10,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
-    api project(":CommonRes")//因为 CommonRes 依赖了 CommonSDK, 所以如果业务模块需要公共 UI 组件就依赖 CommonRes, 如果不需要就只依赖 CommonSDK
+    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
+    api project(":CommonRes")
+    //因为 CommonRes 依赖了 CommonSDK, 所以如果业务模块需要公共 UI 组件就依赖 CommonRes, 如果不需要就只依赖 CommonSDK
 }
