--- a/module_launcher/src/main/release/AndroidManifest.xml
+++ b/module_launcher/src/main/release/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:label="@string/public_name_zhihu"
             android:screenOrientation="portrait" /> <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
         <meta-data
-            android:name="me.jessyan.armscomponent.zhihu.app.GlobalConfiguration"
+            android:name="me.jessyan.armscomponent.app.GlobalConfiguration"
             android:value="ConfigModule" />
     </application>
 
