--- a/module_translate/build.gradle
+++ b/module_translate/build.gradle
@@ -1,5 +1,7 @@
 apply from: "../common_component_build.gradle"
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 android {
     repositories {
         flatDir {
@@ -12,5 +14,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     api project(":CommonRes")
-    //因为 CommonRes 依赖了 CommonSDK, 所以如果业务模块需要公共 UI 组件就依赖 CommonRes, 如果不需要就只依赖 CommonSDK
+    kapt rootProject.ext.dependencies["arouter-compiler"]
+    //tools
+    kapt rootProject.ext.dependencies["dagger2-compiler"]
 }
