--- a/module_translate/src/main/release/AndroidManifest.xml
+++ b/module_translate/src/main/release/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="me.jessyan.armscomponent.zhihu">
+          package="me.jessyan.armscomponent">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,9 +10,9 @@
             android:name=".mvp.ui.activity.DetailActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"/>
-        <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
+        <activity android:name=".mvp.ui.activity.EmergencyActivity"></activity>
         <meta-data
-            android:name="me.jessyan.armscomponent.zhihu.app.GlobalConfiguration"
+            android:name="me.jessyan.armscomponent.app.GlobalConfiguration"
             android:value="ConfigModule"/>
     </application>
 
