--- a/module_user_center/build.gradle
+++ b/module_user_center/build.gradle
@@ -6,7 +6,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //因为 CommonRes 依赖了 CommonSDK, 所以如果业务模块需要公共 UI 组件就依赖 CommonRes, 如果不需要就只依赖 CommonSDK
     api project(":CommonRes")
-
+    annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
+    //tools
+    annotationProcessor rootProject.ext.dependencies["dagger2-compiler"]
 }
