--- a/module_hotspot/src/main/release/AndroidManifest.xml
+++ b/module_hotspot/src/main/release/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.wil.user">
 
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <application>
         <activity android:name="me.jessyan.armscomponent.hotspot.mvp.ui.activity.HotspotActivity"/>
         <!-- 在组件集成宿主时, 由于宿主已经声明了 CommonSDK 的公有 ConfigModule, 所以在这里只需要声明业务组件自己的 ConfigModule -->
