--- a/module_chat/build.gradle
+++ b/module_chat/build.gradle
@@ -6,10 +6,7 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    api rootProject.ext.dependencies["paginate"]
-    kapt rootProject.ext.dependencies["arouter-compiler"]
-    //tools
-    kapt rootProject.ext.dependencies["dagger2-compiler"]
-
+//    kapt rootProject.ext.dependencies["arouter-compiler"]
     implementation 'com.parse:parse-android:1.13.1'
     implementation 'com.android.support:multidex:1.0.1'
     // Google firebase cloud messaging
