--- a/CommonMvp/build.gradle
+++ b/CommonMvp/build.gradle
@@ -114,4 +114,7 @@ dependencies {
 
     //test
     api rootProject.ext.dependencies["timber"]
+
+
+    api rootProject.ext.dependencies["multidex"]
 }
