--- a/module_chat/src/main/release/AndroidManifest.xml
+++ b/module_chat/src/main/release/AndroidManifest.xml
@@ -75,17 +75,17 @@
             android:theme="@style/horizontal_slide"
             android:windowSoftInputMode="adjustPan" />
 
-        <!-- 开屏页 -->
-        <activity
-            android:name=".ui.SplashActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <!--&lt;!&ndash; 开屏页 &ndash;&gt;-->
+        <!--<activity-->
+            <!--android:name=".ui.SplashActivity"-->
+            <!--android:screenOrientation="portrait"-->
+            <!--android:theme="@style/horizontal_slide">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
 
         <!-- 登陆 -->
         <activity
