--- a/CommonMvp/build.gradle
+++ b/CommonMvp/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     //test
     api rootProject.ext.dependencies["timber"]
 
-
     api rootProject.ext.dependencies["multidex"]
+
+    api rootProject.ext.dependencies["pickerview"]
 }
