--- a/module_hotspot/src/main/release/AndroidManifest.xml
+++ b/module_hotspot/src/main/release/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.wil.user">
+          package="me.jessyan.armscomponent.hotspot">
 
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <application>
