--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ import java.text.SimpleDateFormat
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: "config.gradle"
-buildscript { 
+buildscript {
+    ext.kotlin_version = '1.3.50'
     ext.kotlin_version = '1.3.41'
  
     repositories {
