--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply from: "config.gradle"
 buildscript {
     ext.kotlin_version = '1.3.50'
     ext.kotlin_version = '1.3.41'
- 
+
     repositories {
         google()
         jcenter()
@@ -21,7 +21,8 @@ buildscript {
 //        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
         //Gradle Bintray Plugin
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
 
 allprojects {
