--- a/common_component_build.gradle
+++ b/common_component_build.gradle
@@ -6,6 +6,9 @@ if (isBuildModule.toBoolean()) {
     apply plugin: 'com.android.library'
 }
 apply plugin: 'com.jakewharton.butterknife'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -73,7 +76,7 @@ android {
 dependencies {
     if (isBuildModule.toBoolean()) {
         //view
-        annotationProcessor(rootProject.ext.dependencies["butterknife-compiler"]) {
+        kapt(rootProject.ext.dependencies["butterknife-compiler"]) {
             exclude module: 'support-annotations'
         }
 
@@ -82,7 +85,7 @@ dependencies {
         releaseImplementation rootProject.ext.dependencies["canary-release"]
         testImplementation rootProject.ext.dependencies["canary-release"]
     } else {
-        annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
+        kapt rootProject.ext.dependencies["butterknife-compiler"]
 
         compileOnly rootProject.ext.dependencies["canary-debug"]
         compileOnly rootProject.ext.dependencies["canary-release"]
